--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-Hello my first repo file is going live.
-I added this line after the first push 
+<!-- Hello my first repo file is going live.
+I added this line after the first push  -->
 
 <!-- I start to wirte html code now. -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Newapaper</title>
+</head>
+<body>
+    
+</body>
+</html>
