task done by localshishi

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- Hello my first repo file is going live.
-I added this line after the first push  -->
-
 <!-- I start to wirte html code now. -->
 
 <!DOCTYPE html>
@@ -14,3 +11,5 @@ I added this line after the first push  -->
     
 </body>
 </html>
+
+task done by shishir :)
